social link update

--- a/index.html
+++ b/index.html
@@ -73,18 +73,21 @@
         <div class="flex items-center gap-2 font-semibold" >
 
           <div class="flex items-center gap-2 font-semibold">
+
+            <div class="hidden lg:flex">
             <button>
               <i class="fa-solid bg-white  w-8 h-8 p-2 rounded-full fa-magnifying-glass"></i>
             </button>
             <button>
               <i class="fa-solid bg-white  w-8 h-8 p-2 rounded-full fa-cart-shopping"></i>
             </button>
-          </div>
+          
           <button  class="btn bg-lime-400 text-black my-8 flex justify-center mx-auto">
            Book Consult
            <i class=" fa-solid text-white bg-black w-8 h-8 p-2 rounded-full  fa-arrow-right-long -rotate-45"></i>
            </button>
-
+          </div>
+          </div>
            <div class="dropdown">
             <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
               <i class="fa-solid fa-bars"></i>
@@ -135,7 +138,7 @@
 <div class="bg-gray-200">
 <section class=" max-w-screen-2xl mx-auto py-12 ">
 
-  <div class="">
+  <div class="hidden lg:flex">
     <img  src="./images/Vector.png" alt="">
   </div>
 
